--- a/_posts/2025-02-04-2.md
+++ b/_posts/2025-02-04-2.md
@@ -29,18 +29,31 @@ words:
 
 # 待办事项
 
-1. 扩展 Lucas 定理的代码
-2. 排序生成算法：序数法、字典序法、换位法
-3. 格路问题
-4. Catalan 数
-5. **Stirling 数**
-6. 牛顿二项式定理
-7. 容斥原理
-8. 莫比乌斯变换
-9. 鸽巢原理
-10. 分拆数的五边形数定理
-11. 恰好 $k$ 部分分拆数与至多 $k$ 部分分拆数
-12. 分拆数的边界
+*斜体* 的是不会的，**加粗**的是正在写的，<u>下划线</u>的是暂缓的。
+
+2. **排列生成算法：序数法、字典序法、换位法**
+11. 莫比乌斯变换
+12. 容斥原理与鸽巢原理
+17. 群论
+5. 可重复圆排列（莫比乌斯变换）
+6. 群论、集合论的基本内容
+
+***
+
+1. *同一列的第二类 Stirling 数计算*
+2. *同一行的第一类 Stirling 数计算*
+3. *同一列的第一类 Stirling 数计算*
+4. *Stirling 数通项公式证明*
+5. *卡特兰数生成函数证明*
+6. *牛顿二项式定理*
+7. *恰好 $k$ 部分分拆数与至多 $k$ 部分分拆数*
+8. *分拆数的边界*
+9. *分拆数的五边形数定理*
+
+***
+
+1. <u>扩展 Lucas 定理的代码</u>
+2. <u>各种模板题的代码</u>
 
 # 排列与组合
 
@@ -238,10 +251,10 @@ $$
 | 球有无区别 | 盒有无区别 | 盒能否为空 |                            方案数                            |                             注释                             |
 | :--------: | :--------: | :--------: | :----------------------------------------------------------: | :----------------------------------------------------------: |
 |     有     |     有     |     能     |                            $m^n$                             |                   每个球都有 $m$ 种选择。                    |
-|     有     |     有     |     否     |             $m!\begin{Bmatrix}n\\m\end{Bmatrix}$             |                第二类 Stirling 数的一点改动。                |
-|     有     |     无     |     能     | $\sum\limits_{i=1}^{\min(n,m)}\begin{Bmatrix}n\\i\end{Bmatrix}$ |          第二类 Stirling 数对所有可能非空盒数求和。          |
-|     有     |     无     |     否     |              $\begin{Bmatrix}n\\m\end{Bmatrix}$              |                     第二类 Stirling 数。                     |
-|     无     |     有     |     能     |                     $\dbinom{n+m-1}{n}$                      |          从 $m$ 个盒中选择 $n$ 个来放入球，可重复。          |
+|     有     |     有     |     否     |            $$m!\begin{Bmatrix}n\\m\end{Bmatrix}$$            | [第二类 Stirling 数](#第二类-stirling-数)：划分之后进行全排列。 |
+|     有     |     无     |     能     | $$\sum\limits_{i=1}^{\min(n,m)}\begin{Bmatrix}n\\i\end{Bmatrix}$$ | [第二类 Stirling 数](#第二类-stirling-数)：划分为至多 $\min(n,m)$ 个非空子集的方案数总和。 |
+|     有     |     无     |     否     |             $$\begin{Bmatrix}n\\m\end{Bmatrix}$$             |         [第二类 Stirling 数](#第二类-stirling-数)。          |
+|     无     |     有     |     能     |                     $\dbinom{n+m-1}{n}$                      | 从 $m$ 个盒中选择 $n$ 个来放入球，可重复，即[允许重复的组合](#允许重复的组合)。 |
 |     无     |     有     |     否     |                     $\dbinom{n-1}{m-1}$                      |  插空法：$n$ 个球摆好，将 $m-1$ 个挡板插入 $n-1$ 个空即可。  |
 |     无     |     无     |     能     |  $\left[x^n\right]G(x)=\frac{1}{(1-x)(1-x^2)\cdots(1-x^m)}$  | 将 $n$ 个球划分为**至多** $m$ 个部分的方案数之和，即[分拆数](#生成函数)。 |
 |     无     |     无     |     否     | $\left[x^n\right]G(x)=\frac{x^m}{(1-x)(1-x^2)\cdots(1-x^m)}$ | 将 $n$ 个球分为**恰好** $m$ 个部分，即[分拆数](#生成函数)。  |
@@ -739,7 +752,125 @@ $$
 
 时间复杂度：$\mathcal O(p\log p)$。
 
+## 格路问题 路径计数问题
 
+> 这一部分其实同时包括了“排列与组合”、“生成函数与递推关系”和“容斥原理与鸽巢原理”。但因为后两者涉及较浅，放在“排列与组合”部分。
+
+给定一张网格图，你可以向上走或向右走，每次走一个单位长度，起点为点 $(0,0)$，终点为点 $(m,n)$。
+
+非降路径指代在网格图中只能向上或向右的路径。
+
+如果说，向右的路径称之为“$\texttt x$ 型路径”，向上的路径称之为“$\texttt y$ 型路径”，则如图：
+
+![](/img/2025/02/007.png)
+
+不难发现，在从点 $(0,0)$ 至点 $(m,n)$ 的路径上，无论如何都会有 $m$ 个 $\texttt x$，$n$ 个 $\texttt y$。
+
+因此一条路径就可以表示为 $m$ 个 $\texttt x$ 与 $n$ 个 $\texttt y$ 的排列。图中为 $\texttt{xxyxyyyxxyx}$。
+
+### 无限制
+
+考虑到 $\texttt x$ 无区别，$\texttt y$ 无区别，且确定其中一个就能确定剩下的，这个排列的数目为 $\dbinom{n+m}{n}=\dbinom{n+m}{m}$，即方案数。
+
+### 不能触碰直线 $y=x$ 路径端点除外
+
+此部分终点为 $(n,n)$。
+
+![](/img/2025/02/008.png)
+
+那么就会存在如图中的**一条确定的路径**。
+
+则问题转化为了：求从点 $(1,0)$ 至点 $(n,n-1)$ 的方案数。
+
+考虑到其等价于从点 $(0,0)$ 至点 $(n-1,n-1)$ 的方案数，则这条路径的总方案数为 $\dbinom{2n-2}{n-1}$。
+
+当这条路径经过了直线 $y=x$ 时，令交点为点 $P$，则可以将从点 $(0,0)$ 至点 $P$ 的部分关于直线 $y=x$ 作对称变换，得到一条等效的新路径。如图：
+
+![](/img/2025/02/009.png)
+
+新路径的方案数等价于从点 $(0,0)$ 至点 $(n,n-2)$ 的方案数，为 $\dbinom{2n-2}{n}$。
+
+由容斥原理，总方案数为：
+$$
+\begin{aligned}
+\binom{2n-2}{n-1}-\binom{2n-2}{n}&=\frac{(2n-2)!}{(n-1)!(n-1)!}-\frac{(2n-2)!}{n!(n-2)!}\\
+&=\frac{1}{n-1}\binom{2n-2}{n}\\
+&=\frac1n\binom{2n-2}{n-1}
+\end{aligned}
+$$
+这是在直线 $y=x$ **下方**时的方案数，若能够在上方，则答案需要乘 $2$，即：
+
+$$
+\frac2n\binom{2n-2}{n-1}
+$$
+
+
+### 不能触碰直线 $y=x+1$
+
+![](/img/2025/02/010.png)
+
+同上文，构造对称。
+
+从点 $(0,0)$ 至点 $(n,n)$ 的路径总数为 $\dbinom{2n}{n}$，从点 $(-1,1)$ 至点 $(n,n)$ 的方案数为 $\dbinom{2n}{n-1}$。
+
+由容斥原理，符合条件的方案数为：
+
+$$
+\begin{aligned}
+\binom{2n}{n}-\binom{2n}{n-1}&=\frac{(2n)!}{n!n!}-\frac{(2n)!}{(n-1)!(n+1)!}\\
+&=\frac{(2n)!}{n!(n+1)!}\\
+&=\frac{1}{n+1}\cdot\frac{(2n)!}{n!n!}\\
+&=\frac{1}{n+1}\binom{2n}{n}
+\end{aligned}
+$$
+
+可以发现，这就是 [Catalan 数](#catalan-数-卡特兰数)。
+
+***
+
+提供一种~~自己想的还被卡半小时的~~**<span style="color:red;">错误</span>**做法。
+
+> ![](/img/2025/02/011.png)
+>
+> 
+>
+> 如图，同上文，存在两条确定路径，且从点 $(1,0)$ 至点 $(n,n-1)$ 的的总方案数为 $\dbinom{2n-2}{n-1}$。
+>
+> 作点 $(1,0)$ 关于直线 $y=x+1$ 的对称点 $(-1,2)$，连接点 $(-1,2)$ 和点 $P$。
+>
+> 从点 $(-1,2)$ 至点 $(n,n-1)$ 的方案数为 $\dbinom{2n-2}{n+1}$。
+>
+> 由容斥原理，符合条件的方案数为：
+> $$
+> \begin{aligned}
+> \binom{2n-2}{n-1}-\binom{2n-2}{n+1}
+> \end{aligned}
+> $$
+>
+
+貌似正确，实则不然——随便代入几组样例即可发现。
+
+主要原因：应当直接对称，强行确定路径导致计数错误。
+
+### 不能越过直线 $y=x$
+
+即：不能触碰直线 $y=x+1$ 或不能触碰直线 $y=x-1$。
+
+由对称性，两种情况等效。
+
+因此，总方案数为：
+
+$$
+\frac2{n+1}\binom{2n}{n}
+$$
+
+## 排列生成算法
+
+### 字典序法
+
+### 序数法
+
+### 换位法
 
 # 生成函数与递推关系
 
@@ -1293,7 +1424,7 @@ F(x)&=\dfrac{\dfrac{x^3}{(1-x)^2}+x}{1-3x-2x^2}\\
 \end{aligned}
 $$
 
-##### $f_i$ 递推式中包含 $f_j$ 项的次数不为 $1$（Catalan 数）
+##### $f_i$ 递推式中包含 $f_j$ 项的次数不为 $1$（[Catalan 数](#catalan-数-卡特兰数)）
 
 例如：对于序列 $f$，满足 $f_0=1,f_n=\sum\limits_{i=0}^{n-1}f_if_{n-i-1}$，求其生成函数 $F(x)$ 的封闭形式。~~其实就是卡特兰数。~~
 
@@ -1334,6 +1465,7 @@ $$
 对于一般的一次递推式存在通法（二次递推式一般需要去根，一次不需要）：
 
 对于序列 $f$ 满足：
+
 $$
 f_i=
 \begin{cases}
@@ -1341,12 +1473,14 @@ g_i&i<k\\
 \sum\limits_{n=1}^kp_nf_{n-i}+a_i&i\geq k
 \end{cases}
 $$
+
 其生成函数 $F(x)$ 为：
+
 $$
 F(x)=\frac{A(x)+G(x)}{1-\sum\limits_{i=1}^kp_ix^i}
 $$
 
-其中，$A(x)$ 是序列 $a$ 的生成函数，$G(x)$ 是有限序列 $g$ 的生成函数，满足 $|g|\leq k$。
+其中，$A(x)$ 是序列 $a$ 的生成函数，$G(x)$ 是有限序列 $g$ 的生成函数，满足 $\vert g\vert\leq k$。
 
 ### 从生成函数的封闭形式求解通项公式
 
@@ -1664,7 +1798,7 @@ $$
 
 #### 生成函数
 
-<span style="color:red;">注意：所有分拆数的生成函数的起始位置都是 $1$，而不是 $0$，因为不能划分为 $0$ 个部分。</span>
+<span style="color:red;">注意：所有分拆数的生成函数的起始位置都是 $1$，而不是 $0$，因为不能划分为 $0$ 个部分。</span>
 
 令 $p_n$ 表示正整数 $n$ 的分拆数目。
 
@@ -1836,7 +1970,7 @@ $$
 2. 附加性质：$f_{n+k}=f_kf_{n+1}+f_{k-1}n$。
 3. 取第二条性质中 $k=n$，则 $f_{2n}=f_nf_{n+1}+f_{n-1}f_n$。
 4. 由第三条性质归纳可得，$\forall k\in\N,f_n\mid f_{nk}$。
-5. 第四条性质可逆，即 $\forall f_a\mid f_b,a|b$。
+5. 第四条性质可逆，即 $\forall f_a\mid f_b,a\mid b$。
 6. $\gcd(f_m,f_n)=f_{\gcd(m,n)}$。
 7. 以 $f_i,f_{i+1}$ 为输入会使欧几里得算法的复杂度达到最坏情况（具体参见[维基 - 拉梅](https://en.wikipedia.org/wiki/Gabriel_Lamé)）。
 
@@ -1851,7 +1985,7 @@ $$
 
 ### 第二类 Stirling 数
 
-第二类 Stirling 数表示的是将 $n$ 个不同的元素划分为 $k$ 个互不区分的非空子集的方案数，记为 $\begin{Bmatrix}n\\k\end{Bmatrix}$，也可记作 $S(n,k)$。
+第二类 Stirling 数表示的是将 $n$ 个不同的元素划分为 $k$ 个互不区分的非空子集的方案数，记为 $$\begin{Bmatrix}n\\k\end{Bmatrix}$$，也可记作 $S(n,k)$。
 
 <details class="note">
     <summary>第二类 Stirling 数的 $\KaTeX$ 输入</summary>
@@ -1874,8 +2008,8 @@ k
 
 在划分一个新元素时，存在两种情况：
 
-* 将新元素单独划分，方案数：$\begin{Bmatrix}n-1\\k-1\end{Bmatrix}$。
-* 放入现有的 $k$ 个子集，方案数：$k\begin{Bmatrix}n-1\\k\end{Bmatrix}$。
+* 将新元素单独划分，方案数：$$\begin{Bmatrix}n-1\\k-1\end{Bmatrix}$$。
+* 放入现有的 $k$ 个子集，方案数：$$k\begin{Bmatrix}n-1\\k\end{Bmatrix}$$。
 
 则总方案数为：
 $$
@@ -1912,14 +2046,149 @@ $$
 \begin{Bmatrix}n\\k\end{Bmatrix}=\sum_{i=0}^k\frac{(-1)^{k-i}i^n}{i!(k-i)!}
 $$
 
-证明：参见[OI Wiki](https://oi-wiki.org/math/combinatorics/stirling/#%E9%80%9A%E9%A1%B9%E5%85%AC%E5%BC%8F)。
+证明：参见[OI Wiki](https://oi-wiki.org/math/combinatorics/stirling/#通项公式)。
 
 #### 同一行的第二类 Stirling 数计算
 
-即 $n$ 确定，求 $\begin{Bmatrix}n\\0\end{Bmatrix},\begin{Bmatrix}n\\1\end{Bmatrix},\begin{Bmatrix}n\\2\end{Bmatrix},\cdots$。
+即 $n$ 确定，求 $$\begin{Bmatrix}n\\0\end{Bmatrix},\begin{Bmatrix}n\\1\end{Bmatrix},\begin{Bmatrix}n\\2\end{Bmatrix},\cdots$$ 的值。
 
 根据通项公式**卷积**计算即可。
 
+时间复杂度：$\mathcal O(n\log n)$。
+
 #### 同一列的第二类 Stirling 数计算
 
-即 $k$ 确定，求 $\begin{Bmatrix}0\\k\end{Bmatrix},\begin{Bmatrix}1\\k\end{Bmatrix},\begin{Bmatrix}2\\k\end{Bmatrix},\cdots$。
+即 $k$ 确定，求 $$\begin{Bmatrix}0\\k\end{Bmatrix},\begin{Bmatrix}1\\k\end{Bmatrix},\begin{Bmatrix}2\\k\end{Bmatrix},\cdots$$ 的值。
+
+参见[OI Wiki](https://oi-wiki.org/math/combinatorics/stirling/#同一列第二类斯特林数的计算)。
+
+~~不会。~~
+
+### 第一类 Stirling 数
+
+又称“Sitrling 轮换数”或“斯特林轮换数”，表示将 $n$ 个不同的元素划分为 $k$ 个互不区分的非空轮换的方案数，记作 $$\begin{bmatrix}n\\k\end{bmatrix}$$，也可记作 $s(n,k)$。
+
+<details class="note" open>
+    <summary>轮换的定义</summary>
+    <p>
+        一个轮换即一个首尾相接的圆排列，能够通过旋转而互相转换的轮换等价。
+    </p>
+    <p>
+        即：若 $[a,b,c,d]$ 是一个轮换，则：
+    </p>
+    <p>
+        $$
+        [a,b,c,d]=[b,c,d,a]=[c,d,a,b]=[d,a,b,c]
+        $$
+    </p>
+</details>
+
+#### 递推式
+
+与第二类 Stirling 数类似，在划分一个新元素时，同样有两种情况：
+
+* 划分至一个新的非空轮换，方案数 $$\begin{bmatrix}n-1\\k-1\end{bmatrix}$$。
+* 划分至现有轮换，方案数 $$(n-1)\begin{bmatrix}n-1\\k\end{bmatrix}$$。
+
+则总方案数为：
+
+$$
+\begin{bmatrix}
+n\\k
+\end{bmatrix}
+=
+\begin{bmatrix}
+n-1\\k-1
+\end{bmatrix}
++(n-1)
+\begin{bmatrix}
+n-1\\k
+\end{bmatrix}
+$$
+
+#### 伪·通项公式
+
+**第一类 Stirling 数不存在实用的通项公式**。
+
+#### 同一行的第一类 Stirling 数计算
+
+参见[OI Wiki](https://oi-wiki.org/math/combinatorics/stirling/#同一行第一类斯特林数的计算)。
+
+~~不会。~~
+
+#### 同一列的第一类 Stirling 数计算
+
+参见[OI Wiki](https://oi-wiki.org/math/combinatorics/stirling/#同一列第一类斯特林数的计算)。
+
+~~不会。~~
+
+## Catalan 数 卡特兰数
+
+Catalan 数是一个定义的数列，可以用于求解一些问题，例如：
+
+* 对角线不相交的情况下，将一个凸多边形区域分成三角形区域的方法数。
+* 在一个大小为 $n\times n$ 的方格图的左下角走到右上角，每次只能向右或向上一个单位，不走到对角线 $y=x$ 上方（但可以触碰）的方案数。
+* 已知一个栈的入栈序列为 $a_1,a_2,a_3,\cdots,a_n$，求其可能的出栈序列的数目。
+* 更多参见[OI Wiki](https://oi-wiki.org/math/combinatorics/catalan/#catalan-数列)。
+
+满足边界条件 $f_0=1$。
+
+### 递推式
+
+Catalan 数的递推式为：
+
+$$
+f_n=\sum_{i=0}^{n-1}f_{i-1}f_{n-i-1}
+$$
+
+接下来从两个问题的角度分析 Catalan 数的应用。
+
+#### 将一个凸多边形区域分成三角形区域的方法数
+
+如图，取 $n=7$：
+
+![](/img/2025/02/006.png)
+
+对于 $n$ 边形 $A_1A_2A_3\cdots A_n$，可以找到两点 $A_k,A_{k+1}$，从而使得 $A_1A_kA_{k+1}$ 构成三角形。图中取 $k=3$。
+
+而原图也被 $\triangle A_1A_kA_{k+1}$ 划分为了两部分：$k$ 边形 $A_1A_2\cdots A_k$ 和 $n-k-1$ 边形 $A_{k+1}A_{k+2}A_{k+3}\cdots A_nA_1$。
+
+令 $f_m$ 表示 $m$ 边形的划分方案。
+
+则取 $k=3$ 时的方案即为 $f_kf_{n-k-1}$。
+
+枚举 $k$ 后取和即可。即 Catalan 数。
+
+#### 格路问题 路径计数问题
+
+见[格路问题部分](#不能触碰直线-y=x+1)。
+
+#### 出栈序列数目
+
+已知入栈序列 $a_1,a_2,a_3,\cdots,a_n$。
+
+令 $f_i$ 表示前 $i$ 个元素的可能的出栈序列的数目
+
+那么对于元素 $a_i$，其存在两种情况：
+
+* 入栈后直接出栈，方案数为 $f_{i-1}$。
+* 入栈后等待其后面入栈的元素入栈并出栈，其再次成为栈顶时出栈。
+
+~~不会了。~~
+
+### 生成函数
+
+**封闭形式**见[上文“从递推式求解生成函数的封闭形式”](#f_i-递推式中包含-f_j-项的次数不为-1catalan-数)。
+
+**形式幂级数形式的**的推导过程推导见[OI Wiki](https://oi-wiki.org/math/combinatorics/catalan/#封闭形式)。
+
+其为：
+
+$$
+f_n=\frac{1}{n+1}\binom{2n}{n}
+$$
+
+# 容斥原理与鸽巢原理
+
+所谓容斥原理，其实就是用“总情况”减去“不符合条件的情况”得到“符合条件的情况”。
+
