--- a/_posts/2025-02-05-1.md
+++ b/_posts/2025-02-05-1.md
@@ -85,3 +85,43 @@ $$
 或者：$$\left[(1-x)^2\right]'=-1\times2(1-x)=2(x-1)$$。
 
 # 中国剩余定理
+
+# 集合论
+
+集合其实就是将一些元素打包在一起的代数结构。
+
+### 符号
+
+* $\{1,2,3,\cdots,n\}$：由 $1,2,3,\cdots,n$ 构成的集合。
+
+* $\{a\mid P\}$：满足 $P$ 的 $a$。$P$ 为条件，例如：$a\bmod 2=0$、$a\in G$。
+
+* $\vert A\vert$：集合 $A$ 的元素个数。
+
+* $A\bigcup B$：$A$ 并 $B$。
+
+  `\bigcup`。
+
+* $A\bigcap B$：$A$ 交 $B$。
+
+  `\bigcap`。
+
+* $a\in B$：元素 $a$ 属于集合 $B$。
+
+  `\in`。
+
+* $a\notin B$：元素 $a$ 不属于集合 $B$。
+
+  `\notin`。
+
+* $A\subseteq B$：$A$ 是 $B$ 的子集。
+
+  `\subseteq`。
+
+* $A\subset B$：$A$ 是 $B$ 的真子集。
+
+  `\subset`。
+
+* $\varnothing$：空集。
+
+  `\varnothing`。
