--- a/_posts/2025-02-04-2.md
+++ b/_posts/2025-02-04-2.md
@@ -25,18 +25,20 @@ words:
   - 题解：卢卡斯定理/Lucas 定理
 ---
 
-> [参考资料](/file/2025/02/组合数学25年竞赛.zip) [参考资料](/file/2025/02/组合数学修订.zip) [参考资料](/file/2025/02/数学.pdf) [参考资料](/file/2025/02/母函数.pdf) [参考资料](/file/2025/02/组合数学0207.rar) [参考资料](/file/2025/02/组合数学0208.rar)
+> [参考资料](/file/2025/02/组合数学25年竞赛.zip) [参考资料](/file/2025/02/组合数学修订.zip) [参考资料](/file/2025/02/数学.pdf) [参考资料](/file/2025/02/母函数.pdf) [参考资料](/file/2025/02/组合数学0207.rar) [参考资料](/file/2025/02/组合数学0208.rar) [参考资料](/file/2025/02/组合数学0211.rar)
 
 # 待办事项
 
 *斜体* 的是不会的，**加粗**的是正在写的，<u>下划线</u>的是暂缓的。
 
 2. **排列生成算法：序数法、字典序法、换位法**
-11. 莫比乌斯变换
-12. 容斥原理与鸽巢原理
-17. 群论
-5. 可重复圆排列（莫比乌斯变换）
-6. 群论、集合论的基本内容
+3. 莫比乌斯变换
+4. 容斥原理与鸽巢原理
+5. 群论
+6. Burnside 引理与 Pólya 定理
+7. 可重复圆排列（莫比乌斯变换）
+8. 群论、集合论的基本内容
+9. 多项式系数
 
 ***
 
@@ -101,7 +103,7 @@ words:
 
 例如选取 $\{1,2,3\}$ 和选取 $\{1,3,2\}$ 就是两个排列。
 
-从 $n$ 个元素中选取 $m$ 个元素的方案数记作 $P_n^m$（读作 $P\ n\ m$），也可记作 $P(n,m)$ 或 $A_n^m$。
+从 $n$ 个元素中选取 $m$ 个元素的方案数记作 $P_n^m$（读作「$P\ n\ m$」），也可记作 $P(n,m)$ 或 $A_n^m$。
 
 排列的计算公式：
 
@@ -155,7 +157,7 @@ $$
 
 与上文相反，选取 $\{1,2,3\}$ 和选取 $\{1,3,2\}$ 就是同一种组合。
 
-从 $n$ 个元素中选取 $m$ 个元素的方案数记作 $\dbinom{n}{m}$，读作“$n$ 选 $m$”，也可记作 $C(n,m)$ 或 $C_n^m$，读作“$C\ n\ m$”。
+从 $n$ 个元素中选取 $m$ 个元素的方案数记作 $\dbinom{n}{m}$，读作「$n$ 选 $m$」，也可记作 $C(n,m)$ 或 $C_n^m$，读作「$C\ n\ m$」。
 
 组合的计算公式为：
 
@@ -791,6 +793,7 @@ $$
 新路径的方案数等价于从点 $(0,0)$ 至点 $(n,n-2)$ 的方案数，为 $\dbinom{2n-2}{n}$。
 
 由容斥原理，总方案数为：
+
 $$
 \begin{aligned}
 \binom{2n-2}{n-1}-\binom{2n-2}{n}&=\frac{(2n-2)!}{(n-1)!(n-1)!}-\frac{(2n-2)!}{n!(n-2)!}\\
@@ -798,6 +801,7 @@ $$
 &=\frac1n\binom{2n-2}{n-1}
 \end{aligned}
 $$
+
 这是在直线 $y=x$ **下方**时的方案数，若能够在上方，则答案需要乘 $2$，即：
 
 $$
@@ -887,10 +891,13 @@ $$
 几种常见的生成函数：
 
 * **普通生成函数**：
+  
   $$
     G(x)=\sum_{n=0}^\infty a_nx^n
   $$
+  
 * **指数生成函数**：
+  
   $$
   G(x)=\sum_{n=0}^\infty a_n\frac{x^n}{n!}
   $$
@@ -1259,7 +1266,7 @@ $$
 
 * 列方程求解，多用于**等比序列**或者**循环序列**。
 * 转换为已知封闭形式生成函数的形式幂级数形式后求解。
-* 从递推式求解，见下文
+* 从递推式求解，见下文。
 
 需要注意的是，**无限**序列 $a$ 中，若其生成函数为 $G(x)$ 且 $a_0,x>0$，则 $G(x)> x\cdot G(x)$。
 
@@ -1643,6 +1650,7 @@ A(x)\cdot B(x)&=\sum_{n=0}^\infty\sum_{i=0}^n\left(a_i\cdot\frac{x^i}{i!}\right)
 &=\sum_{n=0}^\infty\left(\sum_{i=0}^n\binom{n}{i}a_ib_{n-i}\right)\frac{x^n}{n!}\\
 \end{aligned}
 $$
+
 因此，$A(x)\cdot B(x)$ 是序列 $\left\langle\sum\limits_{i=0}^n\binom{n}{i}a_ib_{n-i}\right\rangle$ 的**指数**生成函数。
 
 ### 一道例题
@@ -1669,7 +1677,7 @@ G_1(x)=G_5(x)=G_9(x)&=1+\frac{x}{1!}+\frac{x^2}{2!}+\frac{x^3}{3!}+\cdots\\
 \end{aligned}
 $$
 
-设满足条件的 $n$ 位数的个数未 $a_n$，则 $\langle a_n\rangle$ 的指数生成函数为 $G(x)$。
+设满足条件的 $n$ 位数的个数为 $a_n$，则 $\langle a_n\rangle$ 的指数生成函数为 $G(x)$。
 
 则：
 
@@ -1683,6 +1691,7 @@ G(x)&=G_1(x)\cdot G_3(x)\cdot G_5(x)\cdot G_7(x)\cdot G_9(x)\\
 $$
 
 考虑到：
+
 $$
 \begin{cases}
 \begin{aligned}
@@ -1694,6 +1703,7 @@ e^x&=\sum_{n=0}^\infty\frac{x^n}{n!}\\
 \end{aligned}
 \end{cases}
 $$
+
 代入原式：
 
 $$
@@ -1707,6 +1717,7 @@ G(x)&=\dfrac{\large \sum\limits_{\normalsize n=0}^{\normalsize \infty}\normalsiz
 &=\sum_{n=0}^\infty\left(\frac{5^n+2\times3^n+1}{4n!}\right)x^n
 \end{aligned}
 $$
+
 则答案 $a_n=\dfrac{5^n+2\times 3^n+1}{4n!}$。
 
 ### 总结
@@ -1979,7 +1990,7 @@ $$
 <details class="note">
     <summary>为什么优先介绍第二类 Stirling 数</summary>
     <p>
-        因为第二类 Stirling 数更常用，且在其本人的著作中也是优先介绍第二类 Stirling 数
+        因为第二类 Stirling 数更常用，且在其本人的著作中也是优先介绍第二类 Stirling 数。
     </p>
 </details>
 
@@ -2012,6 +2023,7 @@ k
 * 放入现有的 $k$ 个子集，方案数：$$k\begin{Bmatrix}n-1\\k\end{Bmatrix}$$。
 
 则总方案数为：
+
 $$
 \begin{Bmatrix}
 n\\
@@ -2087,8 +2099,11 @@ $$
 
 与第二类 Stirling 数类似，在划分一个新元素时，同样有两种情况：
 
-* 划分至一个新的非空轮换，方案数 $$\begin{bmatrix}n-1\\k-1\end{bmatrix}$$。
-* 划分至现有轮换，方案数 $$(n-1)\begin{bmatrix}n-1\\k\end{bmatrix}$$。
+* 划分至一个新的非空轮换，方案数为 $$\begin{bmatrix}n-1\\k-1\end{bmatrix}$$。
+
+  <br>
+
+* 划分至现有轮换，方案数为 $$(n-1)\begin{bmatrix}n-1\\k\end{bmatrix}$$。
 
 则总方案数为：
 
@@ -2106,9 +2121,9 @@ n-1\\k
 \end{bmatrix}
 $$
 
-#### 伪·通项公式
+#### 不存在实用通项公式
 
-**第一类 Stirling 数不存在实用的通项公式**。
+第一类 Stirling 数不存在实用的通项公式。
 
 #### 同一行的第一类 Stirling 数计算
 
@@ -2167,14 +2182,15 @@ $$
 
 已知入栈序列 $a_1,a_2,a_3,\cdots,a_n$。
 
-令 $f_i$ 表示前 $i$ 个元素的可能的出栈序列的数目
+令 $f_{i,j}$ 表示当前 $i$ 个元素尚未入过栈，栈中尚有 $j$ 个元素时的方案数。
 
-那么对于元素 $a_i$，其存在两种情况：
+则答案为 $f_{n,0}$。
 
-* 入栈后直接出栈，方案数为 $f_{i-1}$。
-* 入栈后等待其后面入栈的元素入栈并出栈，其再次成为栈顶时出栈。
+显然有：
 
-~~不会了。~~
+* $f_{0,j}=1$，因为此时只能出栈。
+* $f_{i,-1}=0$，因为此情况不存在。
+* 否则，$f_{i,j}=f_{i,j-1}+f_{i-1,j+1}$。
 
 ### 生成函数
 
@@ -2190,5 +2206,27 @@ $$
 
 # 容斥原理与鸽巢原理
 
+## 容斥原理
+
 所谓容斥原理，其实就是用“总情况”减去“不符合条件的情况”得到“符合条件的情况”。
 
+为了方便表述,一般会使用集合论的知识。
+
+### 一道例题
+
+已知：$\vert A\vert=12,\vert B\vert=8,\vert C\vert=5,\left\vert A\bigcap B\right\vert=3,\left\vert B\bigcap C\right\vert=4,\vert A\bigcap C\vert=9,\vert A\bigcup B\bigcup C\vert=20$。
+
+求：$\vert A\bigcap B\bigcap C\vert$。
+
+这就是很明显的容斥原理。
+
+![](/img/2025/02/012.png)
+
+答案即：
+
+$$
+\begin{aligned}
+\vert A\small\bigcup\normalsize B\small\bigcup\normalsize C\vert-\vert A\vert-\vert B\vert-\vert C\vert+\vert A\small\bigcap\normalsize B\vert+\vert B\small\bigcap\normalsize C\vert+\vert A\small\bigcap\normalsize C\vert&=20-12-8-5+3+4+9\\
+&=11
+\end{aligned}
+$$
