--- a/_posts/2025-02-04-2.md
+++ b/_posts/2025-02-04-2.md
@@ -31,14 +31,15 @@ words:
 
 *斜体* 的是不会的，**加粗**的是正在写的，<u>下划线</u>的是暂缓的。
 
-2. **排列生成算法：序数法、字典序法、换位法**
+2. 排列生成算法：序数法、字典序法、换位法
 3. 莫比乌斯变换
-4. 容斥原理与鸽巢原理
+4. **容斥原理与鸽巢原理**
 5. 群论
 6. Burnside 引理与 Pólya 定理
 7. 可重复圆排列（莫比乌斯变换）
 8. 群论、集合论的基本内容
 9. 多项式系数
+10. 上升幂与下降幂
 
 ***
 
@@ -101,7 +102,7 @@ words:
 
 排列是**有序**的。
 
-例如选取 $\{1,2,3\}$ 和选取 $\{1,3,2\}$ 就是两个排列。
+例如选取 $\lbrace 1,2,3\rbrace $ 和选取 $\lbrace 1,3,2\rbrace $ 就是两个排列。
 
 从 $n$ 个元素中选取 $m$ 个元素的方案数记作 $P_n^m$（读作「$P\ n\ m$」），也可记作 $P(n,m)$ 或 $A_n^m$。
 
@@ -155,7 +156,7 @@ $$
 
 组合是**无序**的。
 
-与上文相反，选取 $\{1,2,3\}$ 和选取 $\{1,3,2\}$ 就是同一种组合。
+与上文相反，选取 $\lbrace 1,2,3\rbrace $ 和选取 $\lbrace 1,3,2\rbrace $ 就是同一种组合。
 
 从 $n$ 个元素中选取 $m$ 个元素的方案数记作 $\dbinom{n}{m}$，读作「$n$ 选 $m$」，也可记作 $C(n,m)$ 或 $C_n^m$，读作「$C\ n\ m$」。
 
@@ -352,7 +353,7 @@ $$
 
 在进行组合数运算时，常常会遇到**除法**。
 
-而出发效率低下，因此想办法避免。
+而除法效率低下，因此想办法避免。
 
 定义数组 $c$，$c_i$ 表示 $i$ 关于 $n!$ 的重数。
 
@@ -393,7 +394,7 @@ $$
 <details class="note">
     <summary>$a,b$ 的项数顺序不影响答案</summary>
     <p>
-        因为 $\binom{n}{i}=\binom{n}{n-i}$。因此对于每一个 $i$，都存在一个 $i'=n-i$ 满足 $a^{i}b^{i'},a^{i'}b^i$ 存在，交换顺序不影响答案。
+        因为 $\dbinom{n}{i}=\dbinom{n}{n-i}$。因此对于每一个 $i$，都存在一个 $i'=n-i$ 满足 $a^{i}b^{i'},a^{i'}b^i$ 存在，交换顺序不影响答案。
     </p>
     <p>
         唯一的例外是当 $n$ 为奇数时，会存在一个元素没有“配对”元素，但这也不影响，因为那必定是 $\frac12(n+1)$，$a,b$ 的项数相同。
@@ -462,7 +463,7 @@ $$
 
    **朱世杰恒等式**。
 
-   考虑集合 $S=\{a_1,a_2,a_3,\cdots,a_{n+1}\}$ 的 $k+1$ 子集数可证。
+   考虑集合 $S=\lbrace a_1,a_2,a_3,\cdots,a_{n+1}\rbrace $ 的 $k+1$ 子集数可证。
 
    ~~我还是不会。~~
 
@@ -1027,7 +1028,7 @@ $$
 
 > 这东西在面试何笔试中比较有用，对 OI 影响似乎不大。
 
-对于 $n$ 元集合 $S=\{a_1,a_2,a_3,\cdots,a_n\}$，若限定元素 $a_i$ 出现次数的集合为 $M_i$，则**该组合数序列的生成函数**为：
+对于 $n$ 元集合 $S=\lbrace a_1,a_2,a_3,\cdots,a_n\rbrace $，若限定元素 $a_i$ 出现次数的集合为 $M_i$，则**该组合数序列的生成函数**为：
 
 $$
 \large G(x)=\prod_{i=1}^n\left(\sum_{m\in M_i}p_{i,m}\cdot x^m\right)
@@ -1045,13 +1046,13 @@ $$
 
 设男同志组合数序列的生成函数为 $G_1(x)$，女同志为 $G_2(x)$，生成函数中每一项的**次数**表示选择的人数。
 
-男同志只能选择偶数个，则能够选择的数目的集合为 $M_1=\{0,2,4,6,8\}$：
+男同志只能选择偶数个，则能够选择的数目的集合为 $M_1=\lbrace 0,2,4,6,8\rbrace $：
 
 $$
 \large G_1(x)=\binom80x^0+\binom82x^2+\binom84x^4+\binom86x^6+\binom88x^8
 $$
 
-女同志至少选择 $2$ 个，则能够选择的数目的集合为 $M_2=\{2,3,4,5\}$：
+女同志至少选择 $2$ 个，则能够选择的数目的集合为 $M_2=\lbrace 2,3,4,5\rbrace $：
 
 $$
 \large G_2(x)=\binom52x^2+\binom53x^3+\binom54x^4+\binom55x^5
@@ -1080,9 +1081,9 @@ $$
 
 其中 $[x^n]G(x)$ 表示 $G(x)$ 中 $x^n$ 项的**系数**。
 
-在这个例子中，就是一个二元集合 $S=\{\text{男同志},\text{女同志}\}$。
+在这个例子中，就是一个二元集合 $S=\lbrace \text{男同志},\text{女同志}\rbrace $。
 
-男同志能够出现的次数的集合 $M_1=\{0,2,4,6,8\}$，女同志能够出现的次数的集合 $M_2=\{2,3,4,5\}$。
+男同志能够出现的次数的集合 $M_1=\lbrace 0,2,4,6,8\rbrace $，女同志能够出现的次数的集合 $M_2=\lbrace 2,3,4,5\rbrace $。
 
 系数即从男（女）同志中选择出指定人数的方案数，组合数计算即可。
 
@@ -2206,13 +2207,9 @@ $$
 
 # 容斥原理与鸽巢原理
 
-## 容斥原理
+## 容斥原理 抽屉原则
 
-所谓容斥原理，其实就是用“总情况”减去“不符合条件的情况”得到“符合条件的情况”。
-
-为了方便表述,一般会使用集合论的知识。
-
-### 一道例题
+### 引入例题
 
 已知：$\vert A\vert=12,\vert B\vert=8,\vert C\vert=5,\left\vert A\bigcap B\right\vert=3,\left\vert B\bigcap C\right\vert=4,\vert A\bigcap C\vert=9,\vert A\bigcup B\bigcup C\vert=20$。
 
@@ -2230,3 +2227,93 @@ $$
 &=11
 \end{aligned}
 $$
+
+### 容斥原理
+
+为了方便表述,一般会使用[集合论](/2025/02/05/1/#集合论)的知识。
+
+所谓容斥原理，其实就是用“总情况”减去“不符合条件的情况”得到“符合条件的情况”。
+
+容斥原理**就是对于集合 $S_i$，明确元的属性 $P_i$ 从而确定 $S_i$**。
+
+设总元素集合 $U$ 中存在 $n$ 种不同属性 $P_1,P_2,P_3,\cdots,P_n$，拥有属性 $P_i$ 的所有元素构成集合 $S_i$，则：
+
+$$
+\left\vert\bigcup_{i=1}^nS_i\right\vert=\sum_{1\leq i\leq n}\vert S_i\vert-\sum_{1\leq i<j\leq n}\vert S_i\bigcap S_j\vert+\sum_{1\leq i<j<k\leq n}\vert S_i\bigcap S_j\bigcap S_k\vert-\cdots+(-1)^{n-1}\left\vert\bigcap_{i=1}^n S_i\right\vert
+$$
+
+<details class="note">
+    <summary>数学归纳法证明</summary>
+    <p>
+        当 $n=1$ 时，上式显然成立。
+    </p>
+    <p>
+        那么假定 $n=m$ 时成立，若能够证明 $n=m+1$ 时也成立，则原命题成立。
+    </p>
+    <p>
+        $n=m$ 时成立，即：
+    </p>
+    <p>
+        $$
+        \left\vert\bigcup_{i=1}^mS_i\right\vert=\sum_{1\leq i\leq m}\vert S_i\vert-\sum_{1\leq i<j\leq m}\vert S_i\bigcap S_j\vert+\sum_{1\leq i<j<k\leq m}\vert S_i\bigcap S_j\bigcap S_k\vert-\cdots+(-1)^{m-1}\left\vert\bigcap_{i=1}^m S_i\right\vert
+        $$
+    </p>
+    <p>
+        由容斥原理，有：
+    </p>
+    <p>
+        $$
+        \left\vert\bigcup_{i=1}^{m+1}S_i\right\vert=\left\vert\bigcup_{i=1}^mS_i\right\vert+\vert S_{m+1}\vert-\left\vert\left(\bigcup_{i=1}^mS_i\right)\bigcap S_{m+1}\right\vert
+        $$
+    </p>
+    <p>
+        展开交集 $\left\vert\left(\bigcup\limits_{i=1}^mS_i\right)\bigcap S_{m+1}\right\vert$，可得：
+    </p>
+    <p>
+        $$
+        \left\vert\left(\bigcup_{i=1}^mS_i\right)\bigcap S_{m+1}\right\vert=\sum_{1\leq i\leq k}\left\vert S_i\bigcap S_{m+1}\right\vert-\sum_{1\leq i<j\leq k}\left\vert S_i\bigcap S_j\bigcap S_{m+1}\right\vert+\cdots+(-1)^{m-1}\left\vert\bigcap_{i=1}^mS_i \bigcap S_{m+1}\right\vert
+        $$
+    </p>
+    <p>
+        回代，即可证明当 $n=m+1$ 时成立。    
+    </p>
+    <p>
+        故，原命题成立。
+    </p>
+</details>
+
+
+例如求解欧拉函数。
+
+### 求解欧拉函数 $\varphi(n)$
+
+$\varphi(n)$ 值的是 $\lbrace 1,2,3,\cdots,n\rbrace $ 中与 $n$ 互质的数的个数。
+
+我们可以通过容斥原理来解决。
+
+不妨对 $n$ 进行分解质因数：
+
+$$
+n=p_1^{c_1}p_2^{c_2}p_3^{c_3}\cdots p_k^{c_k}
+$$
+
+其中，$p_i$ 为质数。
+
+构造集合 $U=\lbrace1,2,3,\cdots,n\rbrace$，定义集合 $A_i=\lbrace x\in U \mid x \equiv 0 \pmod{p_i}\rbrace$，表示所有被 $p_i$ 整除的数的集合。
+
+假定 $x$ 满足 $x$ 与 $n$ 互质，那么 $x$ 的质因子中一定不包含 $p_i(1\leq i\leq k)$。
+
+因此 $\varphi(n)$ 即集合 $U$ 中不属于 $A_1,A_2,A_3,\cdots,A_n$ 中任意集合的元素的个数。
+
+即：
+
+$$
+\begin{aligned}
+\varphi(n)&=\vert U\vert-\vert A_1\bigcup A_2\bigcup A_3\bigcup\cdots\bigcup A_n\vert\\
+&=n\prod_{i=1}^k\frac{p_k-1}{p_k}
+\end{aligned}
+$$
+
+
+## 鸽巢原理
+
