--- a/_posts/2025-02-05-1.md
+++ b/_posts/2025-02-05-1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "数论数学学习笔记"
-subtitle: "乘法逆元 同余方程"
+subtitle: "乘法逆元 同余方程 集合论 群论 各类符号"
 date: 2025-2-5
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
@@ -20,6 +20,7 @@ words:
   - 求导数
   - 导数运算法则
   - 中国剩余定理 CRT
+  - 艾弗森括号Iverson括号Iverson 括号
 ---
 
 > [参考资料](/file/2025/02/数学.pdf)
@@ -44,6 +45,14 @@ words:
 * $a\equiv b\pmod p$：$a,b$ 关于 $p$ 同余。
 
   即：$a\bmod p=b\bmod p$。
+  
+* $\varphi(n)$：欧拉函数，即 $\lbrace 1,2,3,\cdots,n\rbrace$ 中与 $n$ 互质的数的个数。
+
+  `\varphi`。
+
+* 艾弗森括号 Iverson 括号：$[P]$，当 $P$ 为真时取 $1$，否则取 $0$。
+
+  例如：$[n=0]$。
 
 ## 运算
 
@@ -86,6 +95,8 @@ $$
 
 # 中国剩余定理
 
+~~没写。~~
+
 # 集合论
 
 集合其实就是将一些元素打包在一起的代数结构。
@@ -122,6 +133,37 @@ $$
 
   `\subset`。
 
-* $\varnothing$：空集。
+* $\overline{A},A^\complement,\widetilde{A}$：$A$ 的补集。
 
-  `\varnothing`。
+  `\overline{A}`，`A^\complement`，`\widetilde{A}`。
+
+  具体而言，令集合 $U$ 为**全集**，集合 $A$ 为 $U$ 的子集， 则 $U=A\bigcup\overline{A}$。
+
+  有：$\vert U\vert=\vert A\vert+\left\vert\overline A\right\vert$。
+
+* | 集合 | $\varnothing$ | $\Z$ | $\N$ | $\N^*$ 或 $\N^+$ 或 $\Z^+$ |
+  | :--: | :-----------: | :--: | :--------------: | :--: |
+  | 含义 | 空集          | 整数集合 | 自然数集合 | 正整数集合 |
+  | $\KaTeX$ | `\varnothing` | `\Z` | `\N` | `\N^*` 或 `\N^+` 或 `\Z^+` |
+  | 集合 | $\Z^-$ | $\mathbb Q$ | $\R$ | $\mathbb I$ |
+  | 含义 | 负整数集合 | 有理数集 | 实数集 | 虚数集 |
+  | $\KaTeX$ | `\Z^-` | `\mathbb Q` | `\R` | `\mathbb I` |
+  | 集合 | $\mathbb C$ |  |  |  |
+  | 含义 | 复数集 |  |  |  |
+  | $\KaTeX$ | `\mathbb C` |  |  |  |
+
+## 运算
+
+$\bigcup$ 和 $\bigcap$ 都具有结合性。
+
+令 $\overline{A}$ 表示集合 $A$ 的补集，$U$ 为全集，有：
+
+$$
+\begin{aligned}
+\vert S_1\bigcap S_2\bigcap S_3\bigcap\cdots\bigcap S_n\vert&=\vert U\vert-\left\vert\overline{S_1\bigcap S_2\bigcap S_3\bigcap\cdots\bigcap S_n}\right\vert\\
+&=\vert U\vert-\left\vert\overline{S_1}\bigcap\overline{S_2}\bigcap\overline{S_3}\bigcap\cdots\bigcap\overline{S_n}\right\vert\\
+\end{aligned}
+$$
+
+# 群论
+
