--- a/_posts/2025-02-04-2.md
+++ b/_posts/2025-02-04-2.md
@@ -409,8 +409,6 @@ $$
    
    取 $a=b=1$ 代入即可。
 
-   ***
-
 2. $$
    \sum_{i=0}^n(-1)^i\binom{n}{i}=[n=0]
    $$
@@ -419,16 +417,12 @@ $$
 
    令 $a=1,b=-1$ 即可。
 
-   ***
-
 3. $$
    \sum_{i=0}^ni\binom{n}{i}=n\times 2^{n-1}
    $$
    
    令 $a=x,b=1$，代入二项式定理两边求导后可证 $x=1$。
 
-   ***
-   
 4. $$
    \sum_{i=0}^ni^2\binom{n}{i}=n(n+1)2^{n-2}
    $$
@@ -436,8 +430,6 @@ $$
    同上。
 
    ~~显然我还是不会证明。~~
-
-   ***
 
 5. $$
    \sum_{i=0}^m\binom{n}{i}\binom{m}{k-i}=\binom{m+n}{k}
@@ -455,8 +447,6 @@ $$
    
    令 $n=k=m$ 即可。
 
-   ***
-
 6. $$
    \sum_{i=0}^n\binom{i}{k}=\binom{n+1}{k+1}
    $$
@@ -467,15 +457,11 @@ $$
 
    ~~我还是不会。~~
 
-   ***
-
 7. $$
-   \binom{n}{r}\binom{r}{k}=\binom{n}{k}\binom{n-k}{r-k}
+   \binom{n}{r}\binom{r}{k}=\binom{r}{k}\binom{n}{r}=\binom{n}{k}\binom{n-k}{r-k}
    $$
    
    代入公式展开可证。
-
-   ***
 
 8. $$
    \sum_{i=0}^n\binom{n-i}{i}=F_{n+1}
@@ -485,8 +471,6 @@ $$
    
     ~~不会证。~~
 
-   ***
-
 9. $$
    \binom{n+k}{k}^2=\sum_{j=0}^k\binom{k}{j}^2\binom{n+2k-j}{2k}
    $$
@@ -494,8 +478,6 @@ $$
    通过范德蒙恒等式可证，被称为**李善兰恒等式**。
    
    ~~还是不会证。~~
-   
-   ***
    
 10. $$
     \sum_{n=0}^\infty\binom{m}{n}x^n=(1+x)^m
@@ -2228,7 +2210,7 @@ $$
 \end{aligned}
 $$
 
-### 容斥原理
+### 基本原理
 
 为了方便表述,一般会使用[集合论](/2025/02/05/1/#集合论)的知识。
 
@@ -2239,7 +2221,10 @@ $$
 设总元素集合 $U$ 中存在 $n$ 种不同属性 $P_1,P_2,P_3,\cdots,P_n$，拥有属性 $P_i$ 的所有元素构成集合 $S_i$，则：
 
 $$
-\left\vert\bigcup_{i=1}^nS_i\right\vert=\sum_{1\leq i\leq n}\vert S_i\vert-\sum_{1\leq i<j\leq n}\vert S_i\bigcap S_j\vert+\sum_{1\leq i<j<k\leq n}\vert S_i\bigcap S_j\bigcap S_k\vert-\cdots+(-1)^{n-1}\left\vert\bigcap_{i=1}^n S_i\right\vert
+\begin{aligned}
+\left\vert\bigcup_{i=1}^nS_i\right\vert&=\sum_{1\leq i\leq n}\vert S_i\vert-\sum_{1\leq i<j\leq n}\vert S_i\bigcap S_j\vert+\sum_{1\leq i<j<k\leq n}\vert S_i\bigcap S_j\bigcap S_k\vert-\cdots+(-1)^{n-1}\left\vert\bigcap_{i=1}^n S_i\right\vert\\
+&=\sum_{i=1}^n(-1)^{i-1}\sum_{1\leq a_1<a_2<\cdots<a_i\leq n}\left\vert\bigcap_{j=1}^iS_{a_j}\right\vert
+\end{aligned}
 $$
 
 <details class="note">
@@ -2259,19 +2244,24 @@ $$
         $$
     </p>
     <p>
+        令集合 $A=\bigcup\limits_{i=1}^mS_i$，则 $\bigcup\limits_{i=1}^{m+1}S_i=A\bigcup S_{m+1}$。
+    </p>
+    <p>
         由容斥原理，有：
     </p>
     <p>
         $$
-        \left\vert\bigcup_{i=1}^{m+1}S_i\right\vert=\left\vert\bigcup_{i=1}^mS_i\right\vert+\vert S_{m+1}\vert-\left\vert\left(\bigcup_{i=1}^mS_i\right)\bigcap S_{m+1}\right\vert
+        A\bigcup S_{m+1}=\vert A\vert+\vert S_{m+1}\vert-\vert A\bigcap S_{m+1}\vert
         $$
     </p>
     <p>
-        展开交集 $\left\vert\left(\bigcup\limits_{i=1}^mS_i\right)\bigcap S_{m+1}\right\vert$，可得：
+        展开交集大小 $\vert A\bigcap S_{m+1}\vert$ 得：
     </p>
     <p>
         $$
-        \left\vert\left(\bigcup_{i=1}^mS_i\right)\bigcap S_{m+1}\right\vert=\sum_{1\leq i\leq k}\left\vert S_i\bigcap S_{m+1}\right\vert-\sum_{1\leq i<j\leq k}\left\vert S_i\bigcap S_j\bigcap S_{m+1}\right\vert+\cdots+(-1)^{m-1}\left\vert\bigcap_{i=1}^mS_i \bigcap S_{m+1}\right\vert
+        \begin{aligned}
+        \vert A\bigcap S_{m+1}\vert&=\sum_{1\leq i\leq m}\vert S_i\bigcap S_{m+1}\vert - \sum_{1\leq i<j\leq m}\vert S_i\bigcap S_j\bigcap S_{m+1} \vert+\cdots+(-1)^{m-1}\left\vert\bigcap_{i=1}^mS_i\bigcap S_{m+1}\right\vert
+        \end{aligned}
         $$
     </p>
     <p>
@@ -2282,12 +2272,34 @@ $$
     </p>
 </details>
 
+<details class="note">
+    <summary>二项式定理证明</summary>
+    <p>
+        观察等式，可以发现元素 $x$ 在左边显然只统计了 $1$ 次。
+    </p>
+    <p>
+        不妨设元素 $x$ 属于 $m$ 个集合。
+    </p>
+    <p>
+        由组合数，在右边出现的次数为：
+    </p>
+    <p>
+        $$
+        \begin{aligned}
+        \sum\limits_{i=1}^m(-1)^{i-1}\dbinom{m}{i}&=\dbinom{m}{0}-\sum\limits_{i=0}^m(-1)^{i-1}\dbinom{m}{i}\\
+        &=1-(1-1)^m\\
+        &=1\\
+        \end{aligned}
+        $$
+    </p>
+    <p>
+        可以发现，对于任意元素 $x$，在左右两边都只统计了一次，因此相等。
+    </p>
+</details>
 
-例如求解欧拉函数。
+#### 求解欧拉函数 $\varphi(n)$
 
-### 求解欧拉函数 $\varphi(n)$
-
-$\varphi(n)$ 值的是 $\lbrace 1,2,3,\cdots,n\rbrace $ 中与 $n$ 互质的数的个数。
+$\varphi(n)$ 的值是 $\lbrace 1,2,3,\cdots,n\rbrace $ 中与 $n$ 互质的数的个数。
 
 我们可以通过容斥原理来解决。
 
@@ -2305,15 +2317,132 @@ $$
 
 因此 $\varphi(n)$ 即集合 $U$ 中不属于 $A_1,A_2,A_3,\cdots,A_n$ 中任意集合的元素的个数。
 
-即：
+考虑到“补集的交等于并集的补”，有：
 
 $$
 \begin{aligned}
-\varphi(n)&=\vert U\vert-\vert A_1\bigcup A_2\bigcup A_3\bigcup\cdots\bigcup A_n\vert\\
-&=n\prod_{i=1}^k\frac{p_k-1}{p_k}
+\varphi(n)&=\left\vert\overline{A_1}\bigcap\overline{A_2}\bigcap\overline{A_3}\bigcap\cdots\bigcap\overline{A_k}\right\vert\\
+&=\vert U\vert-\vert A_1\bigcup A_2\bigcup A_3\bigcup\cdots\bigcup A_k\vert\\
+&=n-\vert A_1\bigcup A_2\bigcup A_3\bigcup\cdots\bigcup A_k\vert
 \end{aligned}
 $$
 
+由容斥原理：
+
+$$
+\begin{aligned}
+\vert A_1\bigcup A_2\bigcup A_3\bigcup\cdots\bigcup A_k\vert&=\left\vert\bigcup_{i=1}^kA_i\right\vert\\
+&=\sum_{i=1}^k(-1)^{i-1}\sum_{1\leq a_1<a_2<\cdots<a_i\leq k}\left\vert\bigcap_{j=1}^iA_{a_j}\right\vert
+\end{aligned}
+$$
+
+对于 $[1,n]$ 内 $p$ 的倍数可以理解为以 $p$ 为周期，每周期一个，总个数为 $\left\lfloor\dfrac np\right\rfloor$，因此有：
+
+$$
+\left\vert\bigcap_{j=1}^iA_{a_j}\right\vert=\left\lfloor\frac{n}{p_{a_1}p_{a_2}p_{a_3}\cdots p_{a_i}}\right\rfloor
+$$
+
+考虑到保证 $p_i$ 为 $n$ 的质因子，即 $n\bmod p_i=0$，则：
+
+$$
+\left\vert\bigcap_{j=1}^iA_{a_j}\right\vert=\frac{n}{p_{a_1}p_{a_2}p_{a_3}\cdots p_{a_i}}
+$$
+
+那么，有：
+
+$$
+\begin{aligned}
+\varphi(n)&=n-\left(\sum_{i=1}^k(-1)^{i-1}\sum_{1\leq a_1<a_2<a_3<\cdots<a_i\leq k}\frac{n}{p_{a_1}p_{a_2}p_{a_3}\cdots p_{a_i}}\right)\\
+&=n-\sum_{1\leq i\leq k}\frac{n}{p_i}+\sum_{1\leq i<j\leq k}\frac{n}{p_ip_j}-\cdots+(-1)^{n-1}\frac{n}{p_1p_2p_3\cdots p_n}\\
+&=n\left(1-\sum_{1\leq i\leq k}\frac{1}{p_i}+\sum_{1\leq i<j\leq k}\frac{1}{p_ip_j}-\cdots+(-1)^{n-1}\frac{1}{p_1p_2p_3\cdots p_n}\right)\\
+&=n\left(1-\frac{1}{p_1}\right)\left(1-\frac{1}{p_2}\right)\left(1-\frac{1}{p_2}\right)\cdots\left(1-\frac{1}{p_k}\right)\\
+&=n\prod_{i=1}^k\frac{p_i-1}{p_i}
+\end{aligned}
+$$
+
+例如：$735=3\times5\times7^2$。则 $\varphi(735)=735\times\dfrac23\times\dfrac45\times\dfrac67=336$。
+
+### 广义容斥原理
+
+设 $P_1,P_2,P_3,\cdots,P_n$ 为集合 $S$ 中所有可能的性质，令集合 $A_i$ 为 $S$ 中所有具有性质 $P_i$ 的元素的集合。
+
+#### $\alpha(k)$ 与 $\beta(k)$ 的定义
+
+记 $\alpha(k)$ 为**至少**具有 $k$ 个性质的元素个数（但元素满足多个性质时，**会重复计数**）。
+
+$$
+\begin{aligned}
+&\alpha(0)=\vert S\vert\\
+&\alpha(1)=\sum_{i=1}^n\vert A_i\vert\\
+&\alpha(2)=\sum_{1\leq i<j\leq n}\vert A_i\bigcap A_j\vert\\
+&\alpha(n)=\vert A_1\bigcap A_2\bigcap A_3\bigcap\cdots\bigcap A_n\vert\\
+&\alpha(k)=\sum_{1\leq i_1<i_2<\cdots<i_k\leq n}\left\vert\bigcap_{i=i_1}^{i_k}A_i\right\vert
+\end{aligned}
+$$
+
+记 $\beta(k)$ 为**恰好**具有 $k$ 个性质的元素个数（**不会重复计数**）。
+
+$$
+\begin{aligned}
+&\beta(0)=\left\vert\overline{A_1}\bigcap\overline{A_2}\bigcap\overline{A_3}\bigcap\cdots\bigcap\overline{A_n}\right\vert\\
+&\beta(1)=\sum_{i=1}^n\left\vert A_i\bigcap\left(\bigcap_{1\leq j\leq n,j\ne i}\overline{A_j}\right)\right\vert\\
+&\beta(2)=\sum_{1\leq i<j\leq n}\left\vert A_i\bigcap A_j\bigcap\left(\bigcap_{1\leq k\leq n,k\ne i,k\ne j}\overline{A_k}\right)\right\vert\\
+&\beta(n)=\vert A_1\bigcap A_2\bigcap A_3\bigcap\cdots\bigcap A_n \vert\\
+&\beta(k)=\sum_{1\leq i_1<i_2<\cdots<i_k\leq n}\left\vert\left(\bigcap_{j=1}^kA_{i_j}\right)\bigcap\left(\bigcap_{1\leq j\leq n,j\ne i_1,j\ne i_2,\cdots,j\ne i_k}\overline{A_j}\right)\right\vert
+\end{aligned}
+$$
+
+#### $\alpha(k)$ 与 $\beta(k)$ 的关系
+
+$$
+\beta(k)=\alpha(k)-\binom{k+1}{k}\alpha(k+1)+\binom{k+2}{k}\alpha(k+2)-\cdots+(-1)^{n-k}\binom{n}{k}\alpha(n)
+$$
+
+<details class="note">
+    <summary>证明</summary>
+    <p>
+        取一元素 $x$，拥有 $y$ 个性质。
+    </p>
+    <p>
+        若 $y<k$，则由 $\alpha(k),\beta(k)$ 的定义可知元素 $x$ 对等式左右两侧的数值没有影响。
+    </p>
+    <p>
+        若 $y=k$，则由 $\alpha(k),\beta(k)$ 的定义可知元素 $x$ 对等式左右两侧的数值的贡献均为 $1$。
+    </p>
+    <p>
+        若 $y>k$，则由 $\alpha(k),\beta(k)$ 的定义可知元素 $x$ 对等式左侧的贡献为 $0$，对等式右侧的贡献为：
+    </p>
+    <p>
+        $$
+        \begin{aligned}
+        &\ \ \binom{y}{k}-\binom{k+1}{k}\binom{y}{k+1}+\binom{k+2}{k}\binom{y}{k+2}-\cdots+(-1)^{y-k}\binom{y}{k}\binom{y}{y}\\
+        &=\binom{y}{k}-\binom{y}{k}\binom{y-k}{1}+\binom{y}{k}\binom{y-k}{2}-\cdots+(-1)^{y-k}\binom{y}{k}\binom{y-k}{y-k}\\
+        &=\binom{y}{k}\left[\binom{y-k}{0}-\binom{y-k}{1}+\binom{y-k}{2}-\cdots+(-1)^{y-k}\binom{y-k}{y-k}\right]\\
+        &=0\\
+        \end{aligned}
+        $$
+    </p>
+    <p>
+        上述变形过程中使用了公式：
+    </p>
+    <p>
+        $$
+        \binom{r}{k}\binom{n}{r}=\binom{n}{k}\binom{n-k}{r-k}\\
+        \sum_{i=0}^n(-1)^i\binom{n}{i}=[n=0]
+        $$
+    </p>
+    <p>
+        详见<a href="#二项式推论">二项式推论</a>。
+    </p>
+    <hr>
+    <p>
+        故对于任意 $x\in S$ 对于等式左右两侧的影响均相等，则等式左右两侧相等。
+    </p>
+    <p>
+        证毕。
+    </p>
+</details>
+
+
 
 ## 鸽巢原理
-
