--- a/_posts/2025-02-05-1.md
+++ b/_posts/2025-02-05-1.md
@@ -66,7 +66,7 @@ words:
 
 #### 记号
 
-$x$ 的导数记作：$(x)'$。
+$x$ 的导数记作：$(x)^\prime$。
 
 $x$ 是什么（函数、多项式等）见下文。
 
@@ -141,6 +141,8 @@ $$
 
   有：$\vert U\vert=\vert A\vert+\left\vert\overline A\right\vert$。
 
+  注：本人习惯性使用 $\overline{A}$ 表示。
+
 * | 集合 | $\varnothing$ | $\Z$ | $\N$ | $\N^*$ 或 $\N^+$ 或 $\Z^+$ |
   | :--: | :-----------: | :--: | :--------------: | :--: |
   | 含义 | 空集          | 整数集合 | 自然数集合 | 正整数集合 |
@@ -156,12 +158,20 @@ $$
 
 $\bigcup$ 和 $\bigcap$ 都具有结合性。
 
-令 $\overline{A}$ 表示集合 $A$ 的补集，$U$ 为全集，有：
+### 补集的交等于并集的补
+
+即：
+
+$$
+\overline{S_1}\bigcap\overline{S_2}\bigcap\overline{S_3}\bigcap\cdots\bigcap\overline{S_n}=\overline{S_1\bigcup S_2\bigcup S_3\bigcup\cdots\bigcup S_n}
+$$
+
+推广：
 
 $$
 \begin{aligned}
-\vert S_1\bigcap S_2\bigcap S_3\bigcap\cdots\bigcap S_n\vert&=\vert U\vert-\left\vert\overline{S_1\bigcap S_2\bigcap S_3\bigcap\cdots\bigcap S_n}\right\vert\\
-&=\vert U\vert-\left\vert\overline{S_1}\bigcap\overline{S_2}\bigcap\overline{S_3}\bigcap\cdots\bigcap\overline{S_n}\right\vert\\
+\left\vert\overline{S_1}\bigcap\overline{S_2}\bigcap\overline{S_3}\bigcap\cdots\bigcap\overline{S_n}\right\vert&=\left\vert\overline{S_1\bigcup S_2\bigcup S_3\bigcup\cdots\bigcup S_n}\right\vert\\
+&=\vert U\vert-\vert S_1\bigcup S_2\bigcup S_3\bigcup\cdots\bigcup S_n\vert
 \end{aligned}
 $$
 
