--- a/_posts/2024-12-14-8.md
+++ b/_posts/2024-12-14-8.md
@@ -10,8 +10,8 @@ tags:
 words:
 ---
 
-[三体I：地球往事](/file/2024/12/三体I：地球往事.pdf)
+[三体I：地球往事](/file/2024/12/threebody1.pdf)
 
-[三体II：黑暗森林](/file/2024/12/三体II：黑暗森林.pdf)
+[三体II：黑暗森林](/file/2024/12/threebody2.pdf)
 
-[三体III：死神永生](/file/2024/12/三体III：死神永生.pdf)
+[三体III：死神永生](/file/2024/12/threebody3.pdf)
