--- a/_posts/2025-02-04-2.md
+++ b/_posts/2025-02-04-2.md
@@ -25,7 +25,7 @@ words:
   - 题解：卢卡斯定理/Lucas 定理
 ---
 
-> [参考资料](/file/2025/02/组合数学25年竞赛.zip) [参考资料](/file/2025/02/组合数学修订.zip) [参考资料](/file/2025/02/数学.pdf) [参考资料](/file/2025/02/母函数.pdf) [参考资料](/file/2025/02/组合数学0207.rar) [参考资料](/file/2025/02/组合数学0208.rar) [参考资料](/file/2025/02/组合数学0211.rar)
+> [参考资料](/file/2025/02/combinatorial-mathematics.rar) [参考资料](/file/2025/02/math.pdf)
 
 # 待办事项
 
@@ -40,6 +40,7 @@ words:
 8. 群论、集合论的基本内容
 9. 多项式系数
 10. 上升幂与下降幂
+11. 伯努利数
 
 ***
 
@@ -2442,6 +2443,21 @@ $$
         证毕。
     </p>
 </details>
+### 不定方程非负整数解计数
+
+已知 $x_1+x_2+x_3+\cdots+x_n=m$，求 $x_1,x_2,x_3,\cdots,x_n$ 的非负整数解组的个数。
+
+#### 无限制
+
+显然，问题等价于将 $m$ 个无区别的球放入 $n$ 个有区别的盒子，盒子可以为空。
+
+由[球盒问题](#球盒问题)，答案为：
+$$
+\binom{m+n-1}{m}
+$$
+
+#### 限制 $x_i<b_i$
+
 
 
 
