--- a/_posts/2025-02-05-1.md
+++ b/_posts/2025-02-05-1.md
@@ -175,5 +175,20 @@ $$
 \end{aligned}
 $$
 
+### 补集的并等于交集的补
+
+即：
+$$
+\overline{S_1}\bigcup\overline{S_2}\bigcup\overline{S_3}\bigcup\cdots\bigcup\overline{S_n}=\overline{S_1\bigcap S_2\bigcap S_3\cdots\bigcap S_n}
+$$
+推广：
+
+$$
+\begin{aligned}
+\left\vert\overline{S_1}\bigcup\overline{S_2}\bigcup\overline{S_3}\bigcup\cdots\bigcup\overline{S_n}\right\vert&=\left\vert\overline{S_1\bigcap S_2\bigcap S_3\cdots\bigcap S_n}\right\vert\\
+&=\left\vert U\right\vert-\vert S_1\bigcap S_2\bigcap S_3\bigcap\cdots\bigcap S_n\vert
+\end{aligned}
+$$
+
 # 群论
 
