--- a/_posts/2025-02-04-2.md
+++ b/_posts/2025-02-04-2.md
@@ -34,13 +34,15 @@ words:
 2. 排列生成算法：序数法、字典序法、换位法
 3. 莫比乌斯变换
 4. **容斥原理与鸽巢原理**
-5. 群论
-6. Burnside 引理与 Pólya 定理
-7. 可重复圆排列（莫比乌斯变换）
-8. 群论、集合论的基本内容
-9. 多项式系数
-10. 上升幂与下降幂
-11. 伯努利数
+5. **错位排列**
+6. 群论
+7. Burnside 引理与 Pólya 定理
+8. 可重复圆排列（莫比乌斯变换）
+9. 群论、集合论的基本内容
+10. 多项式系数
+11. 上升幂与下降幂
+12. 伯努利数
+13. 不定方程非负整数解计数
 
 ***
 
@@ -2217,9 +2219,9 @@ $$
 
 所谓容斥原理，其实就是用“总情况”减去“不符合条件的情况”得到“符合条件的情况”。
 
-容斥原理**就是对于集合 $S_i$，明确元的属性 $P_i$ 从而确定 $S_i$**。
+容斥原理**就是对于集合 $S_i$，明确元的性质 $P_i$ 从而确定 $S_i$**。
 
-设总元素集合 $U$ 中存在 $n$ 种不同属性 $P_1,P_2,P_3,\cdots,P_n$，拥有属性 $P_i$ 的所有元素构成集合 $S_i$，则：
+设总元素集合 $U$ 中存在 $n$ 种不同性质 $P_1,P_2,P_3,\cdots,P_n$，拥有性质 $P_i$ 的所有元素构成集合 $S_i$，则：
 
 $$
 \begin{aligned}
@@ -2447,6 +2449,8 @@ $$
 
 已知 $x_1+x_2+x_3+\cdots+x_n=m$，求 $x_1,x_2,x_3,\cdots,x_n$ 的非负整数解组的个数。
 
+对于这类问题，一个隐藏的条件即 $0\leq x_i\leq m$。
+
 #### 无限制
 
 显然，问题等价于将 $m$ 个无区别的球放入 $n$ 个有区别的盒子，盒子可以为空。
@@ -2456,8 +2460,74 @@ $$
 \binom{m+n-1}{m}
 $$
 
-#### 限制 $x_i<b_i$
+#### 限制 $x_i\leq b_i$
 
+因为 $x_i$ 为整数，所以 $x_i< b_i$ 的问题就是 $x_i\leq b_i-1$，本质上是一样的。
+
+我们可以抽象出数学容斥模型：
+
+* 全集 $U$：$x_1,x_2,x_3,\cdots,x_n$ 的所有取值可能，$\vert U\vert=$。
+* 元素：变量 $x_i$.
+* 元素性质：$x_i$ 的性质 $P_i$ 即 $x_i\leq b_i$。
+
+令集合 $S_i$ 表示 $x_i$ 满足 $x_i\leq b_i$ 时的所有可能情况。
+
+答案即所有 $x_i$ 均满足其性质 $x_i\leq b_i$ 时的可能情况，即：
+
+$$
+\vert S_1\bigcap S_2\bigcap S_3\bigcap\cdots\bigcap S_n\vert=\vert U\vert-\left\vert\overline{S_1}\bigcup\overline{S_2}\bigcup\overline{S_3}\bigcup\cdots\bigcup\overline{S_n}\right\vert
+$$
+
+对于
+
+### 错排问题
+
+又称错位排列问题，即对于 $\lbrace1,2,3,\cdots,n\rbrace$ 的排列 $P$，如果满足不存在 $P_i=i$，则称排列 $P$ 是一个**错位排列**。
+
+令 $D_n$ 表示 $\lbrace1,2,3,\cdots,n\rbrace$ 的错位排列的个数，有：
+
+$$
+D_n=(n-1)(D_{n-1}+D_{n-2})
+$$
+
+<details class="note">
+    <summary>证明</summary>
+    <p>
+        假设已经得到了一个长度为 $n-1$ 的 $\lbrace1,2,3,\cdots,n-1\rbrace$ 的排列 $P$，分类讨论：
+    </p>
+    <ul>
+        <li>
+            $P_1\sim P_{n-1}$ 中不存在 $P_i=i$：选择一个与 $P_n=n$ 交换即可得到长度为 $n$ 的错位排列，对答案的贡献为 $(n-1)D_{n-1}$。
+        </li>
+        <li>
+            <p>
+                $P_1\sim P_{n-1}$ 中存在至少一个 $P_i=i$：将其与 $P_n=n$ 交换即可得到长度为 $n$ 的错位排列。
+            </p>
+            <p>
+                因为元素的实际值与排列的个数无关，因此不妨令 $P_{n-1}=n-1$。
+            </p>
+            <p>
+                那么这种情况对答案的贡献就是 $(n-1)D_{n-2}$。
+            </p>
+        </li>
+    </ul>
+    <p>
+        由加法原理，合并贡献得到 $D_n=(n-1)(D_{n-1}+D_{n-2})$。
+    </p>
+</details>
+
+变形上式，得到：
+
+$$
+\begin{aligned}
+D_n&=n\cdot D_{n-1}-D_{n-1}+(n-1)D_{n-2}\\
+D_n-n\cdot D_{n-1}&=(-1)^1[D_{n-1}-(n-1)D_{n-2}]\\
+D_n-n\cdot D_{n-1}&=(-1)^2[D_{n-2}-(n-2)D_{n-3}]\\
+D_n-n\cdot D_{n-1}&=(-1)^3[D_{n-3}-(n-3)D_{n-4}]\\
+&\cdots\\
+D_n-n\cdot D_{n-1}&=(-1)[D_1-D_0]
+\end{aligned}
+$$
 
 
 
