--- a/_posts/2025-02-04-2.md
+++ b/_posts/2025-02-04-2.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "组合数学学习笔记"
-subtitle: "排列组合 母函数与递推关系"
+subtitle: "排列组合 母函数与递推关系 容斥原理与鸽巢原理"
 date: 2025-2-4
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
@@ -24,8 +24,8 @@ words:
   - 题解：洛谷P3807
   - 题解：卢卡斯定理/Lucas 定理
 ---
-
 > [参考资料](/file/2025/02/combinatorial-mathematics.rar) [参考资料](/file/2025/02/math.pdf)
+
 
 # 待办事项
 
@@ -43,6 +43,8 @@ words:
 11. 上升幂与下降幂
 12. 伯努利数
 13. 不定方程非负整数解计数
+14. 容斥原理与第二类 Stirling 数、
+15. 多重组合数 与 多重集的组合数
 
 ***
 
@@ -2484,7 +2486,7 @@ $$
 
 又称错位排列问题，即对于 $\lbrace1,2,3,\cdots,n\rbrace$ 的排列 $P$，如果满足不存在 $P_i=i$，则称排列 $P$ 是一个**错位排列**。
 
-令 $D_n$ 表示 $\lbrace1,2,3,\cdots,n\rbrace$ 的错位排列的个数，有：
+令 $D_n$ 表示 $\lbrace1,2,3,\cdots,n\rbrace$ 的错位排列的个数，定义 $D_1=0,D_2=1$，有：
 
 $$
 D_n=(n-1)(D_{n-1}+D_{n-2})
@@ -2525,10 +2527,12 @@ D_n-n\cdot D_{n-1}&=(-1)^1[D_{n-1}-(n-1)D_{n-2}]\\
 D_n-n\cdot D_{n-1}&=(-1)^2[D_{n-2}-(n-2)D_{n-3}]\\
 D_n-n\cdot D_{n-1}&=(-1)^3[D_{n-3}-(n-3)D_{n-4}]\\
 &\cdots\\
-D_n-n\cdot D_{n-1}&=(-1)[D_1-D_0]
+D_n-n\cdot D_{n-1}&=(-1)^{n-1}[D_1-D_0]\\
+D_n-n\cdot D_{n-1}&=(-1)^{n-1}\\
+D_n&=n\cdot D_{n-1}+(-1)^n
 \end{aligned}
 $$
 
-
+$D_0$ 没有意义。
 
 ## 鸽巢原理
