--- a/_posts/2025-02-05-1.md
+++ b/_posts/2025-02-05-1.md
@@ -93,9 +93,103 @@ $$
 
 或者：$$\left[(1-x)^2\right]'=-1\times2(1-x)=2(x-1)$$。
 
-# 中国剩余定理
+# 乘法逆元
 
-~~没写。~~
+若存在 $ax\equiv 1\pmod p$，则称 $x$ 为 $a$ 关于 $p$ 的逆元，记 $x=a^{-1}$。
+
+当 $\gcd(a,p)=1$ 的时候（$p$ 为质数）逆元**一定存在**。
+
+### 费马小定理
+
+对于质数 $p$，若 $\gcd(a,p)=1$，满足 $a^{p-1}\equiv 1\pmod p$，$a^{p-2}\equiv a^{-1}\pmod p$。
+
+常用于分数取模，即：
+
+$$
+\frac{a}{b}\equiv ab^{p-2}\pmod p
+$$
+
+详见[费马小定理](/2024/11/27/1/)。
+
+### 欧拉定理
+
+<details class="info">
+    <summary>欧拉函数</summary>
+    <p>
+        记 $\varphi(n)$ 为 $1\sim n$ 中与 $n$ 互质的数的个数。
+    </p>
+    <p>
+        令 $n=p_1^{c_1}p_2^{c_2}p_3^{c_3}\cdots p_k^{c_k}$，满足 $p_i$ 为质数，$c_i>0$。
+    </p>
+    <p>
+        则：
+    </p>
+    <p>
+        $$
+        \varphi(n)=n\left(1-\frac 1{p_1}\right)\left(1-\frac 1{p_2}\right)\left(1-\frac 1{p_3}\right)\cdots\left(1-\frac 1{p_k}\right)
+        $$
+    </p>
+    <p>
+        推导见<a href="/2025/02/04/2/#求解欧拉函数-varphin">容斥原理求解欧拉函数</a>。
+    </p>
+</details>
+若 $\gcd(a,p)=1$，则 $a^{\varphi(p)}\equiv1\pmod p$。
+
+显然，当 $p$ 为质数时，有 $\varphi(p)=p-1$，即费马小定理。因此，**费马小定理为欧拉定理的特殊形式**。
+
+### 扩展欧拉定理
+
+对于任意的 $a,p,b\in \N^*$，若满足 $\gcd(a,p)>1,b\geq \varphi(p)$，有：
+
+$$
+a^b\equiv a^{b\bmod \varphi(p)+\varphi(p)}\pmod p
+$$
+
+当 $\gcd(a,p)=1$ 时即欧拉定理。
+
+可以使用初等证明或群论证明。
+
+常用于降幂。
+
+### 扩展欧几里得算法
+
+**注意不是”类欧几里得算法“。**
+
+用于求关于 $x,y$ 的方程 $ax+by=\gcd(a,b)$ 的**一组整数特解**。
+
+不妨令 $a>b$。
+
+考虑到 $a=\left\lfloor\dfrac{a}{b}\right\rfloor b+a\bmod b$，代入可得：
+
+$$
+\left(\left\lfloor\frac{a}{b}\right\rfloor b+a\bmod b\right)x+by=\gcd(a,b)
+$$
+
+因此：
+
+$$
+b\left(\left\lfloor\frac ab\right\rfloor x+y\right)+(a\bmod b)x=\gcd(b,a\bmod b)
+$$
+
+令 $a'=b,x'=\left\lfloor\dfrac ab\right\rfloor x+y,b'=a\bmod b,y'=x$，有：
+
+$$
+a'x'+b'y'=\gcd(a',b')
+$$
+
+显然，可以**递归求解**。
+
+那么直到 $b'=a\bmod b=0$ 时，可以直接求解。
+
+***
+
+如果需要讨论 $a$ 模 $p$ 意义下的乘法逆元 $a^{-1}$，显然有 $\gcd(a,p)=1$。
+
+那么可列方程 $ax+py=1$，显然 $ax\equiv1\pmod p$。
+
+则通过扩展欧几里得算法求出 $x$，即求出了 $a$ 的逆元。
+
+
 
 # 集合论
 
@@ -191,4 +285,6 @@ $$
 $$
 
 # 群论
+
+# 莫比乌斯反演
 
