--- a/_posts/2025-02-16-1.md
+++ b/_posts/2025-02-16-1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Vercel 部署 Jekyll 踩坑"
-subtitle: "洛谷P5694"
+subtitle: ""
 date: 2025-2-16
 author: "TH911"
 header-img: "img/2025/02/013.png"
