--- a/_posts/2025-02-05-1.md
+++ b/_posts/2025-02-05-1.md
@@ -286,5 +286,125 @@ $$
 
 # 群论
 
+群论是近代数学的基础之一。
+
+> 群即对称，对称即群。
+
+“群”是一种**代数结构**，群 $(G,\circ)$ 由一个集合 $G$ 和一个二元运算符 $\circ$ 组成。
+
+群 $(G,\circ)$ 需要满足以下**性质**：
+
+* 封闭性。即对于 $\forall a,b\in G$，有 $a\circ b\in G$。
+
+* 结合律。即对于二元运算 $\circ$ 满足 $a\circ(b\circ c)=(a\circ b)\circ c$。
+
+* 存在单位元。即存在 $e\in G$ 满足对于 $\forall a\in G$ 有 $e\circ a=a\circ e=a$。
+
+  例如在 $\circ$ 为乘法的情况下，单位元 $e$ 为 $1$。
+
+* 存在逆元。即对于 $\forall a\in G$，存在 $x\in G$ 满足 $a\circ x=x\circ a=e$。
+
+  记 $x$ 为 $a^{-1}$。
+
+同时，记：
+
+$$
+\underbrace{a\circ a\circ a\circ \cdots\circ a}_{x\text{ 个 }a}=a^x
+$$
+
+有时为了**强调单位元**，也会将群 $(G,\circ)$ 记作群 $(G,\circ,e)$。
+
+例如这两个群：
+
+* 群 $(\Z,+,0)$。
+
+  显然满足上文所述性质。
+
+  **无限群**与整数集加法群同构。
+
+* 群 $(\lbrace0,1,2,\cdots,p-1\rbrace,+_{\bmod p})$，其中 $+_{\bmod p}$ 表示模 $p$ 意义下的加法。
+
+  显然也满足上文所述性质。
+
+  **有限群**与模意义下的整数集加法群同构。
+
+***需要注意的是，群不一定需要满足交换律***。
+
+## 群的性质
+
+已知 $(G,\circ,e)$ 是一个群。
+
+### 单位元唯一
+
+假设存在两个不同的单位元 $e_1,e_2\in G$。
+
+那么有 $e_1=e_1\circ e_2=e_2$，则 $e_1=e_2$。
+
+故，单位元唯一。
+
+### 消去律
+
+* 左消去律：$a\circ b=a\circ c\Rightarrow b=c$。
+* 右消去律：$a\circ b=c\circ b\Rightarrow a=c$。
+
+### 逆元唯一
+
+假设 $a$ 存在两个不同的逆元 $a_1,a_2$。
+
+则有 $a\circ a_1=a\circ a_2=e$。
+
+由消去律有 $a_1=a_2$。
+
+故，逆元唯一。
+
+### 逆元的拆解
+
+对于 $\forall a,b\in G$，有 $(a\circ b)^{-1}=b^{-1}\circ a^{-1}$。
+
+由群的性质，可以得到：
+
+$$
+(a\circ b)^{-1}\circ (a\circ b)=e\\
+b^{-1}\circ a^{-1}\circ (a\circ b)=b^{-1}\circ(a^{-1}\circ a)\circ b=b^{-1}\circ e\circ b=e
+$$
+
+
+
+因此，有 $(a\circ b)^{-1}=b^{-1}\circ a^{-1}$。
+
+## 群的有关概念
+
+已知 $(G,\circ,e)$ 是一个群。
+
+### 有限群
+
+当 $G$ 为有限集时。
+
+**有限群**与模意义下的整数集加法群同构。
+
+#### 群的阶
+
+群 $(G,\circ,e)$ 的阶即 $\vert G\vert$。
+
+### 无限群
+
+当 $G$ 为无限集时。
+
+**无限群**与整数集加法群同构。
+
+### 阿贝尔群
+
+若二元运算 $\circ$ 满足交换律，即满足 $a\circ b=b\circ a$，则称群 $(G,\circ,e)$ 为**阿贝尔群**、**可交换群**或**加法群**。
+
+### 子群
+
+设集合 $H\in G$ 且 $\vert H\vert>0$。
+
+如果满足 $(H,\circ,e)$ 为一个群，则称群 $(H,\circ,e)$ 是群 $(G,\circ,e)$ 的子群，记作 $H\leq G$。
+
+#### 平凡子群
+
+对于任意群 $(G,\circ,e)$，总有平凡子群 $(G,\circ,e)$ 和 $(\lbrace e\rbrace,\circ,e)$。
+
 # 莫比乌斯反演
 
