--- a/_posts/2025-01-21-1.md
+++ b/_posts/2025-01-21-1.md
@@ -17,6 +17,7 @@ words:
   - 维护区间子段和
   - 维护区间最大连续子序列和
   - 维护区间连续子序列和
+  - NOI 2005
 ---
 
 > 考虑到[P2710 数列](https://www.luogu.com.cn/problem/P2710)和[P2042 [NOI2005]维护数列](https://www.luogu.com.cn/problem/P2042)的区别仅仅是一个可以被转换为其他操作的操作和数组大小，放到一篇。
