--- a/_posts/2025-5-5-1.md
+++ b/_posts/2025-5-5-1.md
@@ -64,7 +64,7 @@ DFS 有两个参数 $u,k$，我们可以记 $vis_{u,k}$ 表示状态 $[u,k]$ 是
 
 时间复杂度：$\mathcal O\left((n+m)\log m+nk\right)$。
 
-前一部分是 Dijkstra，后一部分是记搜。
+前一部分是 Dijkstra，后一部分是记搜（状态量 $\mathcal O(nk)$，转移 $\mathcal O(1)$）。
 
 ```cpp
 //#include<bits/stdc++.h>
@@ -156,8 +156,8 @@ int f(int u,int k){
 	return dp[u][k];
 }
 int main(){
-//	freopen("test.in","r",stdin);
-//	freopen("test.out","w",stdout);
+	/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/
 	
 	ios::sync_with_stdio(false);
 	cin.tie(0);cout.tie(0);
