--- a/_posts/2024-12-14-2.md
+++ b/_posts/2024-12-14-2.md
@@ -14,8 +14,13 @@ tags:
   - 线段树
   - 树状数组
   - 二分
+  - 二分答案
   - 倍增算法
 words:
+  - 倍增第k大
+  - 倍增第 k 大
+  - 倍增查询第 k 大
+  - 倍增查询第k大
   - 权值树状数组
   - 权值线段树
   - 插入排序
