--- a/_posts/2025-02-04-2.md
+++ b/_posts/2025-02-04-2.md
@@ -1014,7 +1014,7 @@ $$
 
 ### 生成函数定理
 
-> 这东西在面试何笔试中比较有用，对 OI 影响似乎不大。
+> 这东西在面试和笔试中比较有用，对 OI 影响似乎不大。
 
 对于 $n$ 元集合 $S=\lbrace a_1,a_2,a_3,\cdots,a_n\rbrace $，若限定元素 $a_i$ 出现次数的集合为 $M_i$，则**该组合数序列的生成函数**为：
 
