--- a/_posts/2024-11-18-2.md
+++ b/_posts/2024-11-18-2.md
@@ -11,6 +11,7 @@ tags:
   - 字符串
   - KMP
   - 基础算法
+  - 普及+/提高
 words:
   - 回文
   - 题解：KMP
@@ -22,7 +23,7 @@ words:
 
 ### 命名
 
-首先，你要了解”KMP“的命名由来。
+首先，你要了解“KMP”的命名由来。
 
 其实这仅仅是因为 KMP 算法由三个叫 Donald E. **K**nuth、James H. **M**orris, Jr. 和 Vaughan R. **P**ratt 的人共同提出而已。
 
@@ -36,9 +37,9 @@ words:
 
 ## 朴素算法
 
-最优时间复杂度：$\large \mathcal O\left(n+m\right)$。
+最优时间复杂度：$\mathcal O\left(n+m\right)$。
 
-最坏时间复杂度：$\large \mathcal O(nm)$。
+最坏时间复杂度：$\mathcal O(nm)$。
 
 遍历 $s$，然后同时如果 $s_1[i]=s_2[i]$ 就继续判断 $s_1[i+1]=s_2[i+1],s_1[i+2]=s_2[i+2],\cdots,s_1[i+m-1]=s_2[m]$。在中途如果判断出 $s_1[j]\ne s_2[j]$，就跳出循环 $i$ 继续遍历。
 
