--- a/_posts/2024-12-31-1.md
+++ b/_posts/2024-12-31-1.md
@@ -701,3 +701,11 @@ shuffle(order.begin(),order.end(),Rand);
 可以从 $2$ 开始存储边，无向边的两条有向边相邻，因此可以使用**异或** $1$ 来查找反向边。
 
 [比如这里](/2025/01/23/3/#无向图转有向图存储下环的误判)。
+
+## `memset` 初始化
+
+* $+\infty$：`0x3f` 或 `0x7f`。
+
+  `0x3f` 保证相加之后不会爆 `int`，实际为 $1061109567\approx10^9$。
+
+* $-\infty$：`0x80`。
