--- a/_posts/2025-5-17-2.md
+++ b/_posts/2025-5-17-2.md
@@ -10,29 +10,30 @@ tags:
   - 题解
   - 提高+/省选−
   - 状态压缩
-  - 状压DP
+  - 状压 DP
   - DP
 words:
   - 状压 DP
+  - NOIP2016
 ---
 
 > [题目传送门](https://www.luogu.com.cn/problem/P2831)
 
 # 题意分析
 
-注意到 $n\leq18$，因此考虑状压DP。
+注意到 $n\leq18$，因此可以考虑状压 DP。
 
-设 $dp[s]$ 表示射死的猪状态为 $s$ 时的方案数。
+设 $dp[s]$ 表示射死的猪状态为 $s$ 时的方案数。（$s$ 为方案，是一个小于 $2^n$ 的非负整数，二进制第 $i$ 为表示猪 $i$ 是否被射死。）
 
 那么考虑抛物线如何射死猪。
 
-对于一条抛物线，如果射死一只猪，则无所谓；如果射死两只猪，则可以确定。
+对于一条抛物线，如果射死一只猪，则有无穷多条；如果射死两只猪，则可以确定（因为抛物线形如 $y=ax^2+bx$，必须过点 $(0,0)$）。
 
 那么记 $line[i][j]$ 表示射死第 $i,j$ 只猪的**合法的**抛物线射死的猪的状态（猪从 $0$ 至 $n-1$ 编号）。
 
 记 $(x_i,y_i),(x_j,y_j)$ 分别为猪 $i,j$ 的坐标。
 
-设 $line[i][j]$ 对应抛物线为 $y=ax^2+bx$，则可以确定：
+设 $line[i][j]$ 对应抛物线为 $y=ax^2+bx$，则待定系数法解方程可以确定：
 
 $$
 \begin{cases}
@@ -40,6 +41,7 @@ a=\dfrac{x_j\cdot y_i-x_i\cdot y_j}{x_i\cdot x_j(x_i-x_j)}\\
 b=\dfrac{y_i}{x_i}-a\cdot x_i
 \end{cases}
 $$
+
 那么就可以确定哪些猪会被 $line[i][j]$ 对应抛物线射死。
 
 需要注意的是：
@@ -145,4 +147,3 @@ int main(){
 	return 0;
 }
 ```
-
